framec/tests/snapshots/rust_snapshots__state_args.snap
---
source: framec/tests/rust_snapshots.rs
expression: "compile_fixture(\"04_state_args\", \"rust\")"
---
#[derive(Clone, Debug)]
#[allow(dead_code, non_camel_case_types)]
enum StateArgsFrameEvent {
    Load { initial: i32 },
    Adjust { delta: i32 },
    Peek {  },
    FrameEnter { args: Vec<String> },
    FrameExit { args: Vec<String> },
}

#[derive(Clone)]
#[allow(dead_code, non_camel_case_types)]
enum StateArgsFrameReturn {
    Peek(i32),
    _Lifecycle(std::rc::Rc<dyn std::any::Any>),
}

#[allow(dead_code)]
impl StateArgsFrameEvent {
    fn name(&self) -> &'static str {
        match self {
            StateArgsFrameEvent::Load { .. } => "load",
            StateArgsFrameEvent::Adjust { .. } => "adjust",
            StateArgsFrameEvent::Peek { .. } => "peek",
            StateArgsFrameEvent::FrameEnter { .. } => "$>",
            StateArgsFrameEvent::FrameExit { .. } => "<$",
        }
    }
}

#[derive(Clone, Debug)]
#[allow(dead_code)]
enum StateArgsFrameValue {
    Int(i64),
    Float(f64),
    Bool(bool),
    Str(String),
    List(Vec<Self>),
    Dict(std::collections::HashMap<String, Self>),
}

#[allow(dead_code)]
struct StateArgsFrameContext {
    event: std::rc::Rc<StateArgsFrameEvent>,
    _return: Option<StateArgsFrameReturn>,
    _data: std::collections::HashMap<String, StateArgsFrameValue>,
    _transitioned: bool,
}

impl StateArgsFrameContext {
    fn new(event: std::rc::Rc<StateArgsFrameEvent>, default_return: Option<StateArgsFrameReturn>) -> Self {
        Self {
            event,
            _return: default_return,
            _data: std::collections::HashMap::new(),
            _transitioned: false,
        }
    }
}

#[derive(Clone)]
struct HoldingContext {
    value: i32,
}

impl Default for HoldingContext {
    fn default() -> Self {
        Self {
            value: 0,
        }
    }
}

#[derive(Clone)]
enum StateArgsStateContext {
    Idle,
    Holding(HoldingContext),
    Empty,
}

impl Default for StateArgsStateContext {
    fn default() -> Self {
        StateArgsStateContext::Idle
    }
}

#[allow(dead_code)]
#[derive(Clone)]
struct StateArgsCompartment {
    state: String,
    state_context: StateArgsStateContext,
    enter_args: Vec<String>,
    exit_args: Vec<String>,
    forward_event: Option<StateArgsFrameEvent>,
    parent_compartment: Option<Box<StateArgsCompartment>>,
}

impl StateArgsCompartment {
    fn new(state: &str) -> Self {
        let state_context = match state {
            "Idle" => StateArgsStateContext::Idle,
            "Holding" => StateArgsStateContext::Holding(HoldingContext::default()),
            _ => StateArgsStateContext::Empty,
        };
        Self {
            state: state.to_string(),
            state_context,
            enter_args: Vec::new(),
            exit_args: Vec::new(),
            forward_event: None,
            parent_compartment: None,
        }
    }
}

#[allow(dead_code)]
pub struct StateArgs {
    _state_stack: Vec<StateArgsCompartment>,
    __compartment: StateArgsCompartment,
    __next_compartment: Option<StateArgsCompartment>,
    _context_stack: Vec<StateArgsFrameContext>,
}

#[allow(non_snake_case)]
impl StateArgs {
    pub fn new() -> Self {
        Self {
            _state_stack: Vec::new(),
            _context_stack: Vec::new(),
            __compartment: StateArgsCompartment::new("Idle"),
            __next_compartment: None,
        }
    }

    pub fn __create() -> Self {
        let mut c = Self::new();
        c.__compartment = c.__prepareEnter("Idle", vec![]);
        let __e = std::rc::Rc::new(StateArgsFrameEvent::FrameEnter { args: c.__compartment.enter_args.clone() });
        let __ctx = StateArgsFrameContext::new(std::rc::Rc::clone(&__e), None);
        c._context_stack.push(__ctx);
        c.__kernel(&__e);
        c._context_stack.pop();
        c
    }

    fn __hsm_chain(&mut self, leaf: &str) -> &'static [&'static str] {
        match leaf {
            "Idle" => &["Idle"],
            "Holding" => &["Holding"],
            _ => &[],
        }
    }

    fn __prepareEnter(&mut self, leaf: &str, enter_args: Vec<String>) -> StateArgsCompartment {
        let chain = self.__hsm_chain(leaf);
        let mut comp: Option<StateArgsCompartment> = None;
        for name in chain.iter() {
            let mut new_comp = StateArgsCompartment::new(name);
            new_comp.enter_args = enter_args.clone();
            if let Some(parent) = comp.take() {
                new_comp.parent_compartment = Some(Box::new(parent));
            }
            comp = Some(new_comp);
        }
        comp.expect("chain must contain at least the leaf state")
    }

    fn __prepareExit(&mut self, exit_args: Vec<String>) {
        self.__compartment.exit_args = exit_args.clone();
        let mut cursor = self.__compartment.parent_compartment.as_deref_mut();
        while let Some(c) = cursor {
            c.exit_args = exit_args.clone();
            cursor = c.parent_compartment.as_deref_mut();
        }
    }

    fn __kernel(&mut self, __e: &std::rc::Rc<StateArgsFrameEvent>) {
        // Route event to current state.
        self.__router(__e);
        // Drain any transitions queued by the handler.
        while self.__next_compartment.is_some() {
            let next_compartment = self.__next_compartment.take().expect("invariant: while-loop guard checked is_some()");
            // Exit the current (leaf) state.
            let exit_args = self.__compartment.exit_args.clone();
            let exit_event = std::rc::Rc::new(StateArgsFrameEvent::FrameExit { args: exit_args });
            self.__router(&exit_event);
            // Switch to the new compartment.
            self.__compartment = next_compartment;
            // Three-branch forward-event handling (RFC-0025 Track B.1: forward
            // event is matched on enum variant; $> recognition is now a
            // structural match, not a string compare).
            match self.__compartment.forward_event.take() {
                None => {
                    // No forwarded event — synthesize a fresh $>.
                    let enter_args = self.__compartment.enter_args.clone();
                    let enter_event = std::rc::Rc::new(StateArgsFrameEvent::FrameEnter { args: enter_args });
                    self.__router(&enter_event);
                }
                Some(fwd) if matches!(fwd, StateArgsFrameEvent::FrameEnter { .. }) => {
                    // Forwarded event IS $> — dispatch directly so the
                    // destination's $> handler receives the caller's payload.
                    let fwd_rc = std::rc::Rc::new(fwd);
                    self.__router(&fwd_rc);
                }
                Some(fwd) => {
                    // Forwarded event is not $> — initialize the destination
                    // with a fresh $>, then dispatch the forward.
                    let enter_args = self.__compartment.enter_args.clone();
                    let enter_event = std::rc::Rc::new(StateArgsFrameEvent::FrameEnter { args: enter_args });
                    self.__router(&enter_event);
                    let fwd_rc = std::rc::Rc::new(fwd);
                    self.__router(&fwd_rc);
                }
            }
            for ctx in self._context_stack.iter_mut() {
                ctx._transitioned = true;
            }
        }
    }

    fn __router(&mut self, __e: &std::rc::Rc<StateArgsFrameEvent>) {
        let __ev: &StateArgsFrameEvent = __e;
        match self.__compartment.state.as_str() {
            "Idle" => self._state_Idle(__ev),
            "Holding" => self._state_Holding(__ev),
            _ => {}
        }
    }

    fn __transition(&mut self, next_compartment: StateArgsCompartment) {
        self.__next_compartment = Some(next_compartment);
    }

    pub fn load(&mut self, initial: i32) {
        let __e = std::rc::Rc::new(StateArgsFrameEvent::Load { initial: initial.clone() });
        let mut __ctx = StateArgsFrameContext::new(std::rc::Rc::clone(&__e), None);
        self._context_stack.push(__ctx);
        self.__kernel(&__e);
        self._context_stack.pop();
    }

    pub fn adjust(&mut self, delta: i32) {
        let __e = std::rc::Rc::new(StateArgsFrameEvent::Adjust { delta: delta.clone() });
        let mut __ctx = StateArgsFrameContext::new(std::rc::Rc::clone(&__e), None);
        self._context_stack.push(__ctx);
        self.__kernel(&__e);
        self._context_stack.pop();
    }

    pub fn peek(&mut self) -> i32 {
        let __e = std::rc::Rc::new(StateArgsFrameEvent::Peek {});
        let mut __ctx = StateArgsFrameContext::new(std::rc::Rc::clone(&__e), None);
        self._context_stack.push(__ctx);
        self.__kernel(&__e);
        let __ctx = self._context_stack.pop().expect("invariant: handler must have pushed a context before reading return");
        match __ctx._return {
            Some(StateArgsFrameReturn::Peek(v)) => v,
            Some(StateArgsFrameReturn::_Lifecycle(v)) => v.downcast_ref::<i32>().cloned().unwrap_or_default(),
            _ => Default::default(),
        }
    }

    fn _state_Idle(&mut self, __e: &StateArgsFrameEvent) {
        match __e {
            StateArgsFrameEvent::Load { initial, .. } => {
                self._s_Idle_hdl_user_load(__e, *initial);
            }
            _ => {}
        }
    }

    fn _state_Holding(&mut self, __e: &StateArgsFrameEvent) {
        match __e {
            StateArgsFrameEvent::Adjust { delta, .. } => {
                self._s_Holding_hdl_user_adjust(__e, *delta);
            }
            StateArgsFrameEvent::Peek { .. } => { self._s_Holding_hdl_user_peek(__e); }
            _ => {}
        }
    }

    fn _s_Idle_hdl_user_load(&mut self, __e: &StateArgsFrameEvent, initial: i32) {
        let mut __compartment = self.__prepareEnter("Holding", vec![]);
        {
            if let StateArgsStateContext::Holding(ref mut ctx) = __compartment.state_context {
                ctx.value = initial;
            }
        }
        self.__transition(__compartment);
        return;
    }

    fn _s_Holding_hdl_user_adjust(&mut self, __e: &StateArgsFrameEvent, delta: i32) {
        let value = {
            let mut __sc = &self.__compartment;
            while __sc.state != "Holding" {
                match __sc.parent_compartment.as_deref() {
                    Some(p) => __sc = p,
                    None => break,
                }
            }
            match &__sc.state_context {
                StateArgsStateContext::Holding(ctx) => ctx.value.clone(),
                _ => Default::default(),
            }
        };
        let mut __compartment = self.__prepareEnter("Holding", vec![]);
        {
            if let StateArgsStateContext::Holding(ref mut ctx) = __compartment.state_context {
                ctx.value = value + delta;
            }
        }
        self.__transition(__compartment);
        return;
    }

    fn _s_Holding_hdl_user_peek(&mut self, __e: &StateArgsFrameEvent) {
        let value = {
            let mut __sc = &self.__compartment;
            while __sc.state != "Holding" {
                match __sc.parent_compartment.as_deref() {
                    Some(p) => __sc = p,
                    None => break,
                }
            }
            match &__sc.state_context {
                StateArgsStateContext::Holding(ctx) => ctx.value.clone(),
                _ => Default::default(),
            }
        };
        let __return_val = StateArgsFrameReturn::Peek(value);
         if let Some(ctx) = self._context_stack.last_mut() { ctx._return = Some(__return_val); }
    }
}
